syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lethanh98.demo.query.grpc";
option objc_class_prefix = "HLW";

package com.lethanh98.query;

service UserServiceKinds {
  rpc GetNameUserUnary (GetNameUserUnaryRequest) returns (GetNameUserUnaryResponse);
  rpc GetNameUserServerStreaming (GetNameUserServerStreamingRequest) returns (stream GetNameUserServerStreamingResponse);
  rpc GetNameUserClientStreaming (stream GetNameUserClientStreamingRequest) returns (GetNameUserClientStreamingResponse);
  rpc GetNameUserBidirectionalStreaming (stream GetNameUserBidirectionalStreamingRequest) returns (stream GetNameUserBidirectionalStreamingResponse);
}

message GetNameUserUnaryRequest {
  string id = 1;
}
message GetNameUserUnaryResponse {
  string id = 1;
  string name = 2;
}

message GetNameUserServerStreamingRequest {
  string name = 1;
}
message GetNameUserServerStreamingResponse {
  string id = 1;
  string name = 2;
}


message GetNameUserClientStreamingRequest {
  string id = 1;
}

message GetNameUserClientStreamingResponse {
  repeated UserMsg users = 1;
  message UserMsg {
    string id = 1;
    string name = 2;
  }
}

message GetNameUserBidirectionalStreamingRequest {
  string numberRequest = 1;
  string name = 2;
}
message GetNameUserBidirectionalStreamingResponse {
  string numberRequest = 1;
  string id = 2;
  string name = 3;
}
